# plasma_speech2text

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TESTING.md  install-s2t.sh  metadata.json  s2t-helper.sh  s2t-tester.py  s2t.cpp  test-s2t.sh  vosk-integration.sh  vosk-stt.cpp  vosk-stt.h  vosk-transcribe.py
contents/ui/: main.qml
